# LogicCalculator

./: CMakeLists.txt  COPYRIGHT.txt  README.md  logicCalc.1  logicCalculator.1  logic_calc.y
packaging/: CMakeLists.txt  CMakePackages.txt
src/: Makefile  logic_calc.y
